feat: added update handler for collaborator/invitation
